gitops/config/guacamole/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole
  namespace: guacamole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guacamole.reckeweg.io`)
      kind: Rule
      services:
        - name: guacamole
          port: 80
      middlewares:
        - name: guacamole-redirect-root
  tls:
    certResolver: cloudflare-dns
---
# Redirect / → /guacamole/ damit die App ohne manuellen Pfad erreichbar ist
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: guacamole-redirect-root
  namespace: guacamole
spec:
  redirectRegex:
    regex: "^https://guacamole\\.reckeweg\\.io/?$"
    replacement: "https://guacamole.reckeweg.io/guacamole/"
    permanent: false
